tests/ui/type-alias-impl-trait/implied_lifetime_wf_check.error.stderr
error[E0119]: conflicting implementations of trait `Yay` for type `i32`
  --> $DIR/implied_lifetime_wf_check.rs:27:1
   |
LL | impl Yay for <() as HideIt>::Assoc {}
   | ---------------------------------- first implementation here
LL | #[cfg(error)]
LL | impl Yay for i32 {}
   | ^^^^^^^^^^^^^^^^ conflicting implementation for `i32`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0119`.
